# canberra

./: .gitignore  CLAUDE.md  Cargo.toml  Justfile  README.md
canberra_api/: Cargo.toml
canberra_api/src/: app.rs  lib.rs
canberra_app/: Cargo.toml  build.rs
canberra_app/qml/: Main.qml
canberra_app/qml/windows/: About.qml
canberra_app/src/: app.rs  bloom.wgsl  error.rs  lib.rs  main.rs  window.rs  wobble.wgsl
canberra_app/src/app/: app.rs  mod.rs  qml.rs
canberra_bin/: Cargo.toml
canberra_bin/src/: main.rs
canberra_core/: Cargo.toml  build.rs
canberra_core/src/: lib.rs  logging.rs  material.rs  mesh.rs  object.rs  object_uniform.rs  qml.rs  transform.rs  uuid.rs
canberra_engine/: Cargo.toml
canberra_engine/src/: application.rs  error.rs  lib.rs  renderer.rs  scene.rs  shader.wgsl  shader_lit.wgsl  shader_unlit.wgsl  types.rs  window.rs
canberra_engine/src/application/: state.rs
canberra_engine/src/components/: camera.rs  debug_ui.rs  material.rs  mesh.rs  mod.rs  transform.rs
canberra_engine/src/editor/: hierarchy.rs  inspector.rs  mod.rs
canberra_engine/src/hierarchy/: component.rs  component_data.rs  entity.rs  mod.rs
canberra_engine/src/renderer/: asset_manager.rs  camera_uniform.rs  gpu_mesh.rs  object_uniform_data.rs  shader_registry.rs
canberra_engine/src/types/: shader.rs  vertex.rs
canberra_renderer/: Cargo.toml
canberra_renderer/src/: camera.rs  error.rs  lib.rs  renderer.rs  scene.rs  ui_renderer.rs
canberra_scene/: Cargo.toml
canberra_scene/src/: cube.rs  debug_ui.rs  lib.rs
qt/: Cargo.toml
