[workspace]
members = [
    "canberra_app",
    "canberra_engine",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = [
    "whs31 <whs31@github.io>"
]
license = "BSL-1"
repository = "https://github.com/whs31/canberra"

[workspace.dependencies]
# project
canberra_engine = { path = "./canberra_engine" }

# core
thiserror = "2"
uuid = { version = "1", features = ["v4"] }

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# window/gpu
wgpu = "29"
winit = "0.30"

# gui
egui = "0.34"
egui-wgpu = "0.34"
egui-winit = "0.34"

# async
tokio = { version = "1", features = ["full"] }
pollster = "0.4"

# math / raw-bytes
bytemuck = { version = "1", features = ["derive"] }
glam = { version = "0.32", features = ["bytemuck"] }
num-traits = { version = "0.2" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[workspace.metadata.typos.default]
extend-ignore-words-re = [
    '^[a-zA-Z]{1,2}$' # ignore words up to length 2
]
