[package]
name = "canberra_bin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
canberra_core = { workspace = true }
canberra_renderer = { workspace = true }
canberra_scene = { workspace = true }

thiserror = { workspace = true }
tracing = { workspace = true }
winit = { workspace = true }
egui = { workspace = true }
tokio = { workspace = true, features = ["full"] }
pollster = { workspace = true }
