[package]
name = "canberra_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
uuid = { workspace = true }
semver = { workspace = true }
once_cell = "1.21.3"

qmetaobject = { workspace = true }
qttypes = { workspace = true }
cpp = "0.5.10"

[build-dependencies]
cpp_build = "0.5.10"
semver = "1.0.27"
cargo-build = "1.0.0"