[package]
name = "canberra_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
serde = { workspace = true, features = ["derive"] }
log = { workspace = true }
semver = { workspace = true }
once_cell = { workspace = true }

qmetaobject = { workspace = true }
qttypes = { workspace = true }
cpp = { workspace = true }

[build-dependencies]
cpp_build = { workspace = true }
semver = { workspace = true }
cargo-build = { workspace = true }
