[package]
name = "canberra_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tracing-subscriber = { workspace = true }
wgpu = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }