[package]
name = "canberra_renderer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
winit = { workspace = true }
wgpu = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
egui = { workspace = true }
egui-wgpu = { workspace = true }
egui-winit = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
