[package]
name = "canberra_scene"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
canberra_renderer = { workspace = true }

wgpu = { workspace = true }
egui = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
